--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
+  <link rel="stylesheet" href="index.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bruna Borges - Front-end Developer</title>
 </head>
